force-app/main/default/objects/RuleSetHistory__c/RuleSetHistory__c.object-meta.xml
<CustomObject>
    <label>RuleSet History</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RuleSet Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>