force-app/main/default/objects/RuleSetHistory__c/fields/ApprovalProcessesCount__c.field-meta.xml
<CustomField>
    <fullName>ApprovalProcessesCount__c</fullName>
    <label>ApprovalProcessesCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>