force-app/main/default/objects/RuleSetHistory__c/fields/AuraCount__c.field-meta.xml
<CustomField>
    <fullName>AuraCount__c</fullName>
    <label>AuraCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>