force-app/main/default/objects/RuleSetHistory__c/fields/ClassesCount__c.field-meta.xml
<CustomField>
    <fullName>ClassesCount__c</fullName>
    <label>ClassesCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>