force-app/main/default/objects/RuleSetHistory__c/fields/ComplianceScore__c.field-meta.xml
<CustomField>
    <fullName>ComplianceScore__c</fullName>
    <label>Compliance Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>