force-app/main/default/objects/RuleSetHistory__c/fields/FlexipagesCount__c.field-meta.xml
<CustomField>
    <fullName>FlexipagesCount__c</fullName>
    <label>FlexipagesCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>