force-app/main/default/objects/RuleSetHistory__c/fields/FlowsCount__c.field-meta.xml
<CustomField>
    <fullName>FlowsCount__c</fullName>
    <label>FlowsCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>