force-app/main/default/objects/RuleSetHistory__c/fields/LayoutsCount__c.field-meta.xml
<CustomField>
    <fullName>LayoutsCount__c</fullName>
    <label>LayoutsCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>