force-app/main/default/objects/RuleSetHistory__c/fields/LwcCount__c.field-meta.xml
<CustomField>
    <fullName>LwcCount__c</fullName>
    <label>LwcCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>