force-app/main/default/objects/RuleSetHistory__c/fields/ObjectsCount__c.field-meta.xml
<CustomField>
    <fullName>ObjectsCount__c</fullName>
    <label>ObjectsCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>