force-app/main/default/objects/RuleSetHistory__c/fields/ReportDate__c.field-meta.xml
<CustomField>
    <fullName>ReportDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ReportDate</label>
    <type>Date</type>
</CustomField>