force-app/main/default/objects/RuleSetHistory__c/fields/TriggersCount__c.field-meta.xml
<CustomField>
    <fullName>TriggersCount__c</fullName>
    <label>TriggersCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>