force-app/main/default/objects/RuleSetHistory__c/fields/WorkflowsCount__c.field-meta.xml
<CustomField>
    <fullName>WorkflowsCount__c</fullName>
    <label>WorkflowsCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>