force-app/main/default/objects/RuleSetHistory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ReportDate__c</columns>
    <columns>Type__c</columns>
    <columns>ComplianceScore__c</columns>
    <columns>FlowsCount__c</columns>
    <columns>LayoutsCount__c</columns>
    <columns>FlexipagesCount__c</columns>
    <columns>ObjectsCount__c</columns>
    <columns>ClassesCount__c</columns>
    <columns>ApprovalProcessesCount__c</columns>
    <columns>WorkflowsCount__c</columns>
    <columns>LwcCount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>